--- a/_dockerfiles/Dockerfile-15.05.1-imx6
+++ b/_dockerfiles/Dockerfile-15.05.1-imx6
@@ -5,12 +5,13 @@ ENV OPENWRT_SDK_ARCH imx6
 ENV OPENWRT_SDK_URL https://downloads.openwrt.org/chaos_calmer/15.05.1/imx6/generic/OpenWrt-SDK-15.05.1-imx6_gcc-4.8-linaro_uClibc-0.9.33.2_eabi.Linux-x86_64.tar.bz2
 ENV DEBIAN_FRONTEND noninteractive
 RUN apt-get update;\
-    apt-get install -y git-core subversion build-essential gcc-multilib libssl-dev \
+    apt-get install -y git-core subversion ccache build-essential gcc-multilib libssl-dev \
                        libncurses5-dev zlib1g-dev gawk flex gettext wget unzip python &&\
     useradd -m openwrt &&\
     echo 'openwrt ALL=NOPASSWD: ALL' > /etc/sudoers.d/openwrt &&\
     sudo -iu openwrt wget "${OPENWRT_SDK_URL}" &&\
     sudo -iu openwrt tar xf "$(basename ${OPENWRT_SDK_URL})" &&\
+    sudo -iu openwrt rm -f "$(basename ${OPENWRT_SDK_URL})" &&\
     sudo -iu openwrt mv "$(basename ${OPENWRT_SDK_URL%%.tar.bz2})" openwrt &&\
     sudo -iu openwrt openwrt/scripts/feeds update
 
