temlates: Add Dockerfile-21.02.0.alpine.tpl and Dockerfile-21.02.0.ubuntu.tpl

--- a/dockerfiles/Dockerfile-21.02.3-archs38
+++ b/dockerfiles/Dockerfile-21.02.3-archs38
@@ -1,12 +1,12 @@
-FROM ubuntu:18.04
+FROM ubuntu:22.04
 
 ENV OPENWRT_SDK_VERSION 21.02.3
 ENV OPENWRT_SDK_ARCH archs38
 ENV OPENWRT_SDK_URL https://downloads.openwrt.org/releases/21.02.3/targets/archs38/generic/openwrt-sdk-21.02.3-archs38-generic_gcc-8.4.0_glibc.Linux-x86_64.tar.xz
 ENV DEBIAN_FRONTEND noninteractive
 RUN apt-get update;\
-    apt-get install -y sudo git-core subversion ccache build-essential gcc-multilib libssl-dev \
-                       libncurses5-dev zlib1g-dev gawk flex gettext wget unzip python &&\
+    apt-get install -y build-essential gawk gcc-multilib flex git gettext libncurses5-dev libssl-dev python3-distutils zlib1g-dev \
+                       sudo wget &&\
     useradd -m openwrt &&\
     echo 'openwrt ALL=NOPASSWD: ALL' > /etc/sudoers.d/openwrt &&\
     sudo -iu openwrt wget --tries=3 "${OPENWRT_SDK_URL}" &&\
