--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -4,9 +4,8 @@ on:
   push:
     tags:
       - '*'
-#     branches: [ "master" ]
-#   pull_request:
-#     branches: [ "master" ]
+    branches:
+      - '*'
 
 jobs:
 
